Preconnect to spotify cdn

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://i.scdn.co">
+    <link rel="dns-prefetch" href="https://i.scdn.co">
     <link rel="icon" href="https://open.scdn.co/cdn/images/favicon32.a19b4f5b.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
